# telegram-codex-bridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  config.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agents/: openai.yaml
docs/: OPEN_SOURCE_RELEASE.md
references/: configuration.md
scripts/: doctor.py  install.py  run_bridge.py  service_control.py  uninstall.py
src/telegram_codex_bridge/: __init__.py  bot.py  codex.py  config.py  service.py  sessions.py  state.py  transcribe.py
tests/: test_codex.py  test_config.py  test_service_control.py  test_sessions.py  test_state.py
